--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,16 +1,17 @@
 body {
   background: #E8EEF0 url(bg.gif);
 }
-.field label {
+.div label {
 	display: block;
 	margin: 0 0 11px;
 	text-align: center;
+    font: bold 20px Arial, Tahoma, sans-serif;
 }
 
 #loginForm {
 	width: 290px;
 	padding: 24px 24px 0;
-	margin: 200px auto 0;
+	margin: 100px auto 0;
 	background: #FEFEFE;
   border: 1px solid #CAD8DE;
 	border-radius: 4px;
@@ -39,6 +40,27 @@ body {
 	outline: none;
 }
 #loginForm .field input:focus {
+	border-color: #B7D4EA;
+	box-shadow: inset 2px 2px 6px #EBEBEB, 0 0 4px #D0E6F6, 0 0 0 5px #F2F8FC;
+
+}
+.input {
+	margin: 0 0 18px;
+}
+.input label {
+	display: block;
+	margin: 0 0 11px;
+}
+.input input {
+  font: 12px Arial, Tahoma, sans-serif;
+	color: #444;
+	width: 262px;
+	padding: 9px 13px;
+  border: 1px solid #D2D9DC;
+	border-radius: 3px;
+	outline: none;
+}
+.input input:focus {
 	border-color: #B7D4EA;
 	box-shadow: inset 2px 2px 6px #EBEBEB, 0 0 4px #D0E6F6, 0 0 0 5px #F2F8FC;
 }
@@ -75,4 +97,38 @@ body {
 	text-shadow: 0 -1px rgba(0,0,0,0.15);
 	outline: none;
 }
+.div {
+    display: block;
+    margin: 0 0 11px;
+    text-align: center;
+}.divCreate {
+    display: block;
+    margin: 0 0 11px;
+
+}
+button {
+    display: inline-block;
+	padding: 6px 20px;
+	height: 30px;
+  border-top: 1px solid #98CCE7;
+  border-bottom: 1px solid #7DB0CC;
+  border-left: 1px solid #8CBFD9;
+  border-right: 1px solid #8CBFD9;
+  border-radius: 15px;
+	color: #FFF;
+  font: bold 13px Arial, Tahoma, sans-serif;
+	box-shadow: inset 0 1px #D4EBF7, 0 1px 3px #B8BEBE;
+	background: -moz-linear-gradient(top,  #badff3 0%, #7acbed 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#badff3), color-stop(100%,#7acbed));
+	background: -webkit-linear-gradient(top,  #badff3 0%,#7acbed 100%);
+	background: -o-linear-gradient(top,  #badff3 0%,#7acbed 100%);
+	background: -ms-linear-gradient(top,  #badff3 0%,#7acbed 100%);
+	background: linear-gradient(top,  #badff3 0%,#7acbed 100%);
+	background-color: #9FD7F0;
+	cursor: pointer;
+	text-shadow: 0 -1px rgba(0,0,0,0.15);
+	outline: none;
+}
+.href button::-moz-focus-inner{border:0}
+
 #loginForm .submit button::-moz-focus-inner{border:0}
