--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -77,11 +77,10 @@ body {
 	float: right;
 	padding: 6px 20px;
 	height: 30px;
-  border-top: 1px solid #98CCE7;
-  border-bottom: 1px solid #7DB0CC;
-  border-left: 1px solid #8CBFD9;
-  border-right: 1px solid #8CBFD9;
-  border-radius: 15px;
+	border: 1px solid #8CBFD9;
+	border-top-color: #98CCE7;
+	border-bottom-color: #7DB0CC;
+	border-radius: 15px;
 	color: #FFF;
   font: bold 13px Arial, Tahoma, sans-serif;
 	box-shadow: inset 0 1px #D4EBF7, 0 1px 3px #B8BEBE;
@@ -124,11 +123,10 @@ button {
     display: inline-block;
 	padding: 6px 20px;
 	height: 30px;
-  border-top: 1px solid #98CCE7;
-  border-bottom: 1px solid #7DB0CC;
-  border-left: 1px solid #8CBFD9;
-  border-right: 1px solid #8CBFD9;
-  border-radius: 15px;
+	border: 1px solid #8CBFD9;
+	border-top-color: #98CCE7;
+	border-bottom-color: #7DB0CC;
+	border-radius: 15px;
 	color: #FFF;
   font: bold 13px Arial, Tahoma, sans-serif;
 	box-shadow: inset 0 1px #D4EBF7, 0 1px 3px #B8BEBE;
